--- a/index.html
+++ b/index.html
@@ -130,32 +130,26 @@
       updateCooldownTimer();
     });
 
-    // Predefined user passwords
-    const userPasswords = ["A1bC2", "D3eF4", "G5hI6", "J7kL8", "M9nO0",
-  "P1qR2", "S3tU4", "V5wX6", "Y7zA8", "B9cD0",
-  "E1fG2", "H3iJ4", "K5lM6", "N7oP8", "Q9rS0",
-  "T1uV2", "W3xY4", "Z5aB6", "C7dE8", "F9gH0",
-  "I1jK2", "L3mN4", "O5pQ6", "R7sT8", "U9vW0",
-  "X1yZ2", "A3bC4", "D5eF6", "G7hI8", "J9kL0",
-  "M1nO2", "P3qR4", "S5tU6", "V7wX8", "Y9zA0",
-  "B1cD2", "E3fG4", "H5iJ6", "K7mN8", "N9oP0",
-  "Q1rS2", "T3uV4", "W5yZ6", "Z7aB8", "C9dE0",
-  "F1gH2", "I3jK4", "L5mN6", "O7pQ8", "R9sT0",
-  "U1vW2", "X3yZ4", "A5bC6", "D7eF8", "G9hI0",
-  "J1kL2", "M3nO4", "P5qR6", "S7tU8", "V9wX0",
-  "Y1zA2", "B3cD4", "E5fG6", "H7iJ8", "K9lM0",
-  "N1oP2", "Q3rS4", "T5uV6", "W7yZ8", "Z9aB0",
-  "C1dE2", "F3gH4", "I5jK6", "L7mN8", "O9pQ0",
-  "R1sT2", "U3vW4", "X5yZ6", "A7bC8", "D9eF0",
-  "G1hI2", "J3kL4", "M5nO6", "P7qR8", "S9tU0",
-  "V1wX2", "Y3zA4", "B5cD6", "E7fG8", "H9iJ0",
-  "K1lM2", "N3oP4", "Q5rS6", "T7uV8", "W9yZ0"];
-
     const passwordInput = document.getElementById('passwordInput');
     const submitPasswordButton = document.getElementById('submitPassword');
 
-    // Randomly select a user password for the week
-    const currentUserPassword = userPasswords[Math.floor(Math.random() * userPasswords.length)];
+    // Get password for the current week from Firebase
+    const currentUserPasswordRef = ref(database, 'passwords/currentWeekPassword');
+    let currentUserPassword = '';
+
+    // Retrieve password for the current week from Firebase
+    onValue(currentUserPasswordRef, (snapshot) => {
+      currentUserPassword = snapshot.val();
+      if (!currentUserPassword) {
+        // If there's no password for the current week, create a new one
+        currentUserPassword = Math.random().toString(36).slice(-6).toUpperCase();
+        set(currentUserPasswordRef, currentUserPassword).then(() => {
+          console.log('New password generated and saved for the week.');
+        }).catch((error) => {
+          console.error('Error saving password:', error);
+        });
+      }
+    });
 
     // Handle password submission
     submitPasswordButton.addEventListener('click', () => {
