--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
     <p>Game on and happy pixeling!</p>
   </div>
 
+  <!-- Regular user password section -->
+  <div id="regularUserPasswordSection">
+    <h3>Regular User Authentication</h3>
+    <input type="password" id="regularUserPasswordInput" placeholder="Enter regular user password">
+    <button id="submitRegularUserPassword">Submit</button>
+  </div>
+
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-app.js";
     import { getDatabase, ref, set, onValue, remove } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-database.js";
@@ -61,6 +68,9 @@
     const cooldownDuration = 5 * 60 * 1000; // 5 minutes cooldown
     let cooldownEndTime = null;
     let isUserAuthenticated = false; // Track user authentication status
+
+    // Regular user password
+    const regularUserPassword = "temporarypassword123"; // Temporary password for regular users
 
     // Set canvas size
     const canvasWidth = 400;
@@ -159,6 +169,22 @@
       } else {
         alert('Incorrect password! Please try again.');
         passwordInput.value = ''; // Clear the input
+      }
+    });
+
+    // Handle regular user password submission
+    const regularUserPasswordInput = document.getElementById('regularUserPasswordInput');
+    const submitRegularUserPasswordButton = document.getElementById('submitRegularUserPassword');
+
+    submitRegularUserPasswordButton.addEventListener('click', () => {
+      const regularPassword = regularUserPasswordInput.value.trim();
+
+      if (regularPassword === regularUserPassword) {
+        alert('Regular user access granted! You can now place a pixel.');
+        isUserAuthenticated = true; // Set to true for regular users
+      } else {
+        alert('Incorrect regular user password! Please try again.');
+        regularUserPasswordInput.value = ''; // Clear the input
       }
     });
 
