--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     let isUserAuthenticated = false; // Track user authentication status
 
     // Regular user password
-    const regularUserPassword = "temporarypassword123"; // Temporary password for regular users
+    const regularUserPassword = "Hys7j"; // Temporary password for regular users
 
     // Set canvas size
     const canvasWidth = 400;
