--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
   <title>Pixel Wars</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
+  <style>
+    #canvas {
+      width: 400px;
+      height: 400px;
+      border-radius: 50%; /* Makes the canvas circular */
+      overflow: hidden; /* Hides anything outside the circle */
+      display: block;
+      margin: 0 auto; /* Centers the canvas */
+    }
+  </style>
 </head>
 <body>
   <h1>Pixel Wars</h1>
