--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <div id="welcomeText">
     <h2>Welcome to Pixel Wars!</h2>
-    <p>This space is all about collaboration and creativity. Go wild, be quirky, or team up with others to create something amazing. The image you create here will become our server banner at the end of every month. You've got one pixel every 5 minutes, so make it count!</p>
+    <p>This space is all about collaboration and creativity. Go wild, be quirky, or team up with others to create something amazing. The image you create here will become our server profile picture at the end of every month. You've got one pixel every 2 minutes, so make it count!</p>
     <p>Here are some quick tips to get you started:</p>
     <ul>
       <li>Click on the canvas to place a pixel.</li>
