--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     let isUserAuthenticated = false; // Track user authentication status
 
     // Regular user password
-    const regularUserPassword = "HappyN3wY3ar"; // Temporary password for regular users
+    const regularUserPassword = "Hrhw32"; // Temporary password for regular users
 
     // Set canvas size
     const canvasWidth = 400;
